// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`divide(1, 2) 1`] = `
"export {divide}

function divide(a, b) {
  return a / b
}
"
`;

exports[`divide(1, 2) 2`] = `
"export {divide}

function divide(a, b) {
  return a / b
}
"
`;

exports[`multiply(1, 2) && divide(1, 2) 1`] = `
"export {sum, multiply, divide}

function sum(a, b) {
  return a + b
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`multiply(1, 2) 1`] = `
"export {sum, multiply}

function sum(a, b) {
  return a + b
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}
"
`;

exports[`multiply(1, 2) 2`] = `
"export {sum, multiply}

function sum(a, b) {
  return a + b
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}
"
`;

exports[`subtract(1, 2) && divide(1, 2) 1`] = `
"export {sum, subtract, divide}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`subtract(1, 2) && multiply(1, 2) && divide(1, 2) 1`] = `
"export {sum, subtract, multiply, divide}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`subtract(1, 2) && multiply(1, 2) 1`] = `
"export {sum, subtract, multiply}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}
"
`;

exports[`subtract(1, 2) 1`] = `
"export {sum, subtract}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}
"
`;

exports[`subtract(1, 2) 2`] = `
"export {sum, subtract}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}
"
`;

exports[`sum(1, 2) && divide(1, 2) 1`] = `
"export {sum, divide}

function sum(a, b) {
  return a + b
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`sum(1, 2) && multiply(1, 2) && divide(1, 2) 1`] = `
"export {sum, multiply, divide}

function sum(a, b) {
  return a + b
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`sum(1, 2) && multiply(1, 2) 1`] = `
"export {sum, multiply}

function sum(a, b) {
  return a + b
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}
"
`;

exports[`sum(1, 2) && subtract(1, 2) && divide(1, 2) 1`] = `
"export {sum, subtract, divide}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`sum(1, 2) && subtract(1, 2) && multiply(1, 2) && divide(1, 2) 1`] = `
"export {sum, subtract, multiply, divide}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}

function divide(a, b) {
  return a / b
}
"
`;

exports[`sum(1, 2) && subtract(1, 2) && multiply(1, 2) 1`] = `
"export {sum, subtract, multiply}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}

function multiply(a, b) {
  let product, i
  product = 0
  for (i = 0; i < b; i++) {
    product = sum(product, a)
  }
  return product
}
"
`;

exports[`sum(1, 2) && subtract(1, 2) 1`] = `
"export {sum, subtract}

function sum(a, b) {
  return a + b
}

function subtract(a, b) {
  return sum(a, -b)
}
"
`;

exports[`sum(1, 2) 1`] = `
"export {sum}

function sum(a, b) {
  return a + b
}
"
`;

exports[`sum(1, 2) 2`] = `
"export {sum}

function sum(a, b) {
  return a + b
}
"
`;
